# industrial_experimental

./: .gitignore  .travis.yml  LICENSE  README.md
IRC_v2/: README.md
IRC_v2/industrial_robot_client/: CMakeLists.txt
IRC_v2/industrial_robot_client/include/industrial_robot_client2/: joint_relay_handler.h  joint_trajectory_action.h  joint_trajectory_interface.h  joint_trajectory_streamer.h  robot_state_interface.h  robot_status_relay_handler.h  utils.h
IRC_v2/industrial_robot_simulator/: industrial_robot_simulator
IRC_v2/industrial_utils/src/: param_utils.cpp
IRC_v2/simple_message/: CMakeLists.txt
IRC_v2/simple_message/src/: byte_array.cpp  dynamic_group_status.cpp  dynamic_joint_pt.cpp  dynamic_joint_state.cpp  robot_status.cpp  simple_message.cpp
IRC_v2/simple_message/test/: utest_message.cpp
industrial_robot_pkg_gen/: CMakeLists.txt  README.md  package.xml  setup.py
industrial_robot_pkg_gen/resources/: CMakeLists.empy  controller_manager.empy  controllers.empy  download_interface.empy  joint_names.empy  launch_test.empy  load_launch.empy  moveit_planning_execution.empy  package.empy  robot_state_visualize.empy  streaming_interface.empy  test_model.empy
industrial_robot_pkg_gen/scripts/: package_generator
industrial_robot_pkg_gen/src/industrial_robot_pkg_gen/: cmd_line_interface.py  generators.py  macros.py  package_generator  utils.py
industrial_robot_pkg_gen/templates/: CMakeLists.empy  controller_manager.empy  load_launch.empy  moveit_planning_execution.empy  package.empy  robot_state_visualize.empy  roslaunch_test.empy  streaming_interface.empy  test_model.empy
(+32 files in other folders)
