<?xml version="1.0"?>
<package>
  <name>industrial_robot_pkg_gen</name>
  <version>0.0.0</version>
  <description>The industrial_robot_pkg_gen package generates robot packages that conform to the ROS-Industrial package specification.  http://wiki.ros.org/Industrial/Tutorials/SuggestedPackageLayoutNewRepositories </description>

  <maintainer email="shaun.edwards@gmail.com">ros</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://wiki.ros.org/industrial_robot_pkg_gen</url>
  <author >Shaun Edwards</author>
  <author email="shaun.edwards@gmail.com">Shaun Edwards</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
